{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1029,
  "lineage": "594abc9e-a60b-a1b1-d699-580c0d0d2134",
  "resources": [
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02854a7ab5e6b89eb",
            "association_id": "eipassoc-0681c9e1a1e166780",
            "domain": "vpc",
            "id": "eipalloc-02854a7ab5e6b89eb",
            "instance": "i-09c7b738f89d9aae8",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08e2e5f31c854b7b7",
            "private_dns": "ip-10-0-1-222.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.222",
            "public_dns": "ec2-15-165-171-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.171.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0084b3e5b489354fd",
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:instance/i-0667cff11e33a7bdb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test-app-ec2-ec2-stage",
            "id": "i-0667cff11e33a7bdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-app-stage",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040e0930b98281ea2",
            "private_dns": "ip-10-0-1-230.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-43-201-34-15.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.34.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-04025607814713af6",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a0160d1cbf26e5b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06173064c3e5e4f18",
            "tags": {
              "Name": "test-app-ec2-stage"
            },
            "tags_all": {
              "Name": "test-app-ec2-stage"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0160d1cbf26e5b4"
            ]
          },
          "dependencies": [
            "module.service-ec2-test-app.aws_iam_instance_profile.iam_instance_profile",
            "module.service-ec2-test-app.aws_security_group.sg",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:loadbalancer/app/test-app-ec2-stage/878b8c88ede8486a",
            "arn_suffix": "app/test-app-ec2-stage/878b8c88ede8486a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-app-ec2-stage-398331578.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:loadbalancer/app/test-app-ec2-stage/878b8c88ede8486a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-app-ec2-stage",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a0160d1cbf26e5b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018ab6ed40e443423"
              },
              {
                "subnet_id": "subnet-05d3b26f01396c809"
              },
              {
                "subnet_id": "subnet-06173064c3e5e4f18"
              }
            ],
            "subnets": [
              "subnet-018ab6ed40e443423",
              "subnet-05d3b26f01396c809",
              "subnet-06173064c3e5e4f18"
            ],
            "vpc_id": "vpc-0050d8cfb9dfef680",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.service-ec2-test-app.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:listener/app/test-app-ec2-stage/878b8c88ede8486a/49cf9775ac205c22",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-ec2-stage/d474661750ce4cf7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:listener/app/test-app-ec2-stage/878b8c88ede8486a/49cf9775ac205c22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:loadbalancer/app/test-app-ec2-stage/878b8c88ede8486a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service-ec2-test-app.aws_lb.example",
            "module.service-ec2-test-app.aws_lb_target_group.example",
            "module.service-ec2-test-app.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-ec2-stage/d474661750ce4cf7",
            "arn_suffix": "targetgroup/test-app-ec2-stage/d474661750ce4cf7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-ec2-stage/d474661750ce4cf7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-app-ec2-stage",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-ec2-stage/d474661750ce4cf7-20230601073407127900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-ec2-stage/d474661750ce4cf7",
            "target_id": "10.0.1.230"
          },
          "dependencies": [
            "module.service-ec2-test-app.aws_iam_instance_profile.iam_instance_profile",
            "module.service-ec2-test-app.aws_instance.ec2",
            "module.service-ec2-test-app.aws_lb_target_group.example",
            "module.service-ec2-test-app.aws_security_group.sg",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.service-ec2-test-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:security-group/sg-0a0160d1cbf26e5b4",
            "description": "test-app-ec2-stage-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a0160d1cbf26e5b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "121.134.226.223/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-app-ec2-stage-SG",
            "name_prefix": "",
            "owner_id": "615794048861",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.service-ecs-test-app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:loadbalancer/app/test-app-stage/ddb6ee458397767c",
            "arn_suffix": "app/test-app-stage/ddb6ee458397767c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-app-stage-1660116164.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:loadbalancer/app/test-app-stage/ddb6ee458397767c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-app-stage",
            "preserve_host_header": false,
            "security_groups": [
              "sg-038bc3116332d5e07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018ab6ed40e443423"
              },
              {
                "subnet_id": "subnet-05d3b26f01396c809"
              },
              {
                "subnet_id": "subnet-06173064c3e5e4f18"
              }
            ],
            "subnets": [
              "subnet-018ab6ed40e443423",
              "subnet-05d3b26f01396c809",
              "subnet-06173064c3e5e4f18"
            ],
            "vpc_id": "vpc-0050d8cfb9dfef680",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.service-ecs-test-app.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.service-ecs-test-app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:listener/app/test-app-stage/ddb6ee458397767c/96a5c627dd64c625",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-stage/021a1b1496828b44",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:listener/app/test-app-stage/ddb6ee458397767c/96a5c627dd64c625",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:loadbalancer/app/test-app-stage/ddb6ee458397767c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service-ecs-test-app.aws_lb.example",
            "module.service-ecs-test-app.aws_lb_target_group.example",
            "module.service-ecs-test-app.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.service-ecs-test-app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-stage/021a1b1496828b44",
            "arn_suffix": "targetgroup/test-app-stage/021a1b1496828b44",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:615794048861:targetgroup/test-app-stage/021a1b1496828b44",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-app-stage",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.service-ecs-test-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:security-group/sg-038bc3116332d5e07",
            "description": "test-app-stage-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-038bc3116332d5e07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "121.134.226.223/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-app-stage-SG",
            "name_prefix": "",
            "owner_id": "615794048861",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bfa4d9126a6257f",
            "association_id": "eipassoc-0b355fd0563f6fe83",
            "domain": "vpc",
            "id": "eipalloc-05bfa4d9126a6257f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ef51613c06454b43",
            "private_dns": "ip-10-0-1-79.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-43-201-242-237.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.242.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "metaverse2-stage-nat-eip-0"
            },
            "tags_all": {
              "Name": "metaverse2-stage-nat-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016d445b9d257c38e",
            "association_id": "eipassoc-0fbaa584b383e162b",
            "domain": "vpc",
            "id": "eipalloc-016d445b9d257c38e",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-00c08193178bc328b",
            "private_dns": "ip-10-0-2-242.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.242",
            "public_dns": "ec2-43-201-194-104.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.194.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "metaverse2-stage-nat-eip-1"
            },
            "tags_all": {
              "Name": "metaverse2-stage-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7b24a4f95f5fc46",
            "association_id": "eipassoc-06d2b392a2fd047ad",
            "domain": "vpc",
            "id": "eipalloc-0e7b24a4f95f5fc46",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b02c39a275d29347",
            "private_dns": "ip-10-0-3-126.ap-northeast-2.compute.internal",
            "private_ip": "10.0.3.126",
            "public_dns": "ec2-15-164-119-83.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.119.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "metaverse2-stage-nat-eip-2"
            },
            "tags_all": {
              "Name": "metaverse2-stage-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:internet-gateway/igw-0b262f903fd85ba78",
            "id": "igw-0b262f903fd85ba78",
            "owner_id": "615794048861",
            "tags": {
              "Name": "metaverse2-stage-igw"
            },
            "tags_all": {
              "Name": "metaverse2-stage-igw"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bfa4d9126a6257f",
            "association_id": "eipassoc-0b355fd0563f6fe83",
            "connectivity_type": "public",
            "id": "nat-0cfe65481a0ba4484",
            "network_interface_id": "eni-0ef51613c06454b43",
            "private_ip": "10.0.1.79",
            "public_ip": "43.201.242.237",
            "subnet_id": "subnet-06173064c3e5e4f18",
            "tags": {
              "Name": "metaverse2-stage-nat-gateway-1"
            },
            "tags_all": {
              "Name": "metaverse2-stage-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016d445b9d257c38e",
            "association_id": "eipassoc-0fbaa584b383e162b",
            "connectivity_type": "public",
            "id": "nat-0ace5b919bb843a75",
            "network_interface_id": "eni-00c08193178bc328b",
            "private_ip": "10.0.2.242",
            "public_ip": "43.201.194.104",
            "subnet_id": "subnet-05d3b26f01396c809",
            "tags": {
              "Name": "metaverse2-stage-nat-gateway-2"
            },
            "tags_all": {
              "Name": "metaverse2-stage-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7b24a4f95f5fc46",
            "association_id": "eipassoc-06d2b392a2fd047ad",
            "connectivity_type": "public",
            "id": "nat-0ad034f1898d5959a",
            "network_interface_id": "eni-0b02c39a275d29347",
            "private_ip": "10.0.3.126",
            "public_ip": "15.164.119.83",
            "subnet_id": "subnet-018ab6ed40e443423",
            "tags": {
              "Name": "metaverse2-stage-nat-gateway-3"
            },
            "tags_all": {
              "Name": "metaverse2-stage-nat-gateway-3"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08cb6eb22d6d21bac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cfe65481a0ba4484",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08cb6eb22d6d21bac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-087215c335ed93a391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ace5b919bb843a75",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-087215c335ed93a39",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b491bec7b149d2a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad034f1898d5959a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b491bec7b149d2a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d17d0c0552d5d8621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cfe65481a0ba4484",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d17d0c0552d5d862",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f8a223d062f46811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ace5b919bb843a75",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f8a223d062f4681",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0328f1e36f21915831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad034f1898d5959a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0328f1e36f2191583",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b262f903fd85ba78",
            "id": "r-rtb-0c269a9ec40cee7f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c269a9ec40cee7f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-08cb6eb22d6d21bac",
            "id": "rtb-08cb6eb22d6d21bac",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfe65481a0ba4484",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-private-route-table-1"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-087215c335ed93a39",
            "id": "rtb-087215c335ed93a39",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ace5b919bb843a75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-private-route-table-2"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-0b491bec7b149d2a6",
            "id": "rtb-0b491bec7b149d2a6",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad034f1898d5959a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-private-route-table-3"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-route-table-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-0d17d0c0552d5d862",
            "id": "rtb-0d17d0c0552d5d862",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfe65481a0ba4484",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-private-route-table-4"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-route-table-4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-00f8a223d062f4681",
            "id": "rtb-00f8a223d062f4681",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ace5b919bb843a75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-private-route-table-5"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-route-table-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-0328f1e36f2191583",
            "id": "rtb-0328f1e36f2191583",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad034f1898d5959a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-private-route-table-6"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-route-table-6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:route-table/rtb-0c269a9ec40cee7f3",
            "id": "rtb-0c269a9ec40cee7f3",
            "owner_id": "615794048861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b262f903fd85ba78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metaverse2-stage-public-route-table"
            },
            "tags_all": {
              "Name": "metaverse2-stage-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e92846c880d66753",
            "route_table_id": "rtb-08cb6eb22d6d21bac",
            "subnet_id": "subnet-05a69beaf4854bfed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a39b8cdbe2fc50c",
            "route_table_id": "rtb-087215c335ed93a39",
            "subnet_id": "subnet-00259936cd13f77ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063813117b4ea2fe5",
            "route_table_id": "rtb-0b491bec7b149d2a6",
            "subnet_id": "subnet-09465b129b70c8a57"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a286da02e8bf68d2",
            "route_table_id": "rtb-0d17d0c0552d5d862",
            "subnet_id": "subnet-038d633dda63422cd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad30cebaaa88f27f",
            "route_table_id": "rtb-00f8a223d062f4681",
            "subnet_id": "subnet-021d1e9c1e674edd3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ec1ac8d6073445",
            "route_table_id": "rtb-0328f1e36f2191583",
            "subnet_id": "subnet-006aeb8382efa5002"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0be35622b357c7",
            "route_table_id": "rtb-0c269a9ec40cee7f3",
            "subnet_id": "subnet-06173064c3e5e4f18"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037696dda2cec9065",
            "route_table_id": "rtb-0c269a9ec40cee7f3",
            "subnet_id": "subnet-05d3b26f01396c809"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4db16c22eafe499",
            "route_table_id": "rtb-0c269a9ec40cee7f3",
            "subnet_id": "subnet-018ab6ed40e443423"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-05a69beaf4854bfed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a69beaf4854bfed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-private-subnet-1"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-subnet-1"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-00259936cd13f77ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00259936cd13f77ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-private-subnet-2"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-subnet-2"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-09465b129b70c8a57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09465b129b70c8a57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-private-subnet-3"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-subnet-3"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-038d633dda63422cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.104.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038d633dda63422cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-private-subnet-4"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-subnet-4"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-021d1e9c1e674edd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.105.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021d1e9c1e674edd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-private-subnet-5"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-subnet-5"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-006aeb8382efa5002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.106.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006aeb8382efa5002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-private-subnet-6"
            },
            "tags_all": {
              "Name": "metaverse2-stage-private-subnet-6"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-06173064c3e5e4f18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06173064c3e5e4f18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-public-subnet-1"
            },
            "tags_all": {
              "Name": "metaverse2-stage-public-subnet-1"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-05d3b26f01396c809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3b26f01396c809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-public-subnet-2"
            },
            "tags_all": {
              "Name": "metaverse2-stage-public-subnet-2"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:subnet/subnet-018ab6ed40e443423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ab6ed40e443423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615794048861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metaverse2-stage-public-subnet-3"
            },
            "tags_all": {
              "Name": "metaverse2-stage-public-subnet-3"
            },
            "vpc_id": "vpc-0050d8cfb9dfef680"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:615794048861:vpc/vpc-0050d8cfb9dfef680",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a94d8e3d8ded1241",
            "default_route_table_id": "rtb-0d1a8d401ee3a2947",
            "default_security_group_id": "sg-039a9957b448ceac4",
            "dhcp_options_id": "dopt-983e47f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0050d8cfb9dfef680",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1a8d401ee3a2947",
            "owner_id": "615794048861",
            "tags": {
              "Name": "metaverse2-stage-vpc"
            },
            "tags_all": {
              "Name": "metaverse2-stage-vpc"
            }
          }
        }
      ]
    }
  ]
}